--- a/style.css
+++ b/style.css
@@ -1,31 +1,66 @@
 * {
-    box-sizing: border-box;
-    font-family: "Montserrat", sans-serif;
-    margin: 0;
-    padding: 0;
-  }
-  
-  body {
-    background-color: #fff;
-  }
-  
-  a,
-  li {
-    text-decoration: none;
-    list-style-type: none;
-  }
+  box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
+  margin: 0;
+  padding: 0;
+}
 
-  .navbar{
-    box-shadow: 0 2px 10px 0 rgba(0,0,0,0.15);
-    width: 100%;
-    height: 100px;
-    top: 0;
+body {
+  background-color: #fff;
+}
 
-  }
+a,
+li {
+  text-decoration: none;
+  list-style-type: none;
+}
 
-  .main-background{
-    background: rgb(0,0,255);
-    background: linear-gradient(13deg, rgba(0,0,255,1) 0%, rgba(0,212,255,1) 100%);
-      width: 100%;
-      height: 400px;
-  }
+.navbar {
+  box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.15);
+  width: 100%;
+  background-color: #fff;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100px;
+}
+
+.main-background {
+  background: rgb(0, 0, 255);
+  background: linear-gradient(
+    13deg,
+    rgba(0, 0, 255, 1) 0%,
+    rgba(0, 212, 255, 1) 100%
+  );
+  width: 100%;
+  height: 400px;
+  margin-top: 100px;
+}
+
+.flexbox {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: stretch;
+  align-items: flex-start;
+  margin: 50px 0px;
+}
+
+.box {
+  width: 400px;
+  height: 500px;
+  box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.15);
+  margin: 0px 20px;
+  background-color: #fff;
+  border-radius: 10px;
+  align-self: auto;
+  padding: 20px 30px;
+}
+
+.number-title{
+    font-size: 72px;
+    -webkit-text-stroke: 3px rgb(0, 0, 255);;
+    font-weight: 600;
+    color: transparent;
+}
