--- a/style.css
+++ b/style.css
@@ -15,6 +15,17 @@ li {
   list-style-type: none;
 }
 
+img {
+    -webkit-user-drag: none;
+    -khtml-user-drag: none;
+    -moz-user-drag: none;
+    -o-user-drag: none;
+    user-drag: none;
+  }
+
+
+/* NAVBAR */
+
 .navbar {
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.15);
   width: 100%;
@@ -23,19 +34,36 @@ li {
   top: 0;
   width: 100%;
   height: 100px;
+  z-index: 1000;
 }
+
+
+
+/* MAIN BACKGROUND */
 
 .main-background {
   background: rgb(0, 0, 255);
-  background: linear-gradient(
-    13deg,
-    rgba(0, 0, 255, 1) 0%,
-    rgba(0, 212, 255, 1) 100%
-  );
+  background: linear-gradient(13deg,rgba(0, 0, 255, 1) 0%,rgba(0, 212, 255, 1) 100%);
   width: 100%;
-  height: 400px;
+  padding: 300px;
   margin-top: 100px;
 }
+
+.main-text{
+    color: #fff;
+    letter-spacing: 0.8px;
+    font-weight: 700;
+    text-align: center;
+    font-size: 50px;
+}
+
+.main-text-weight{
+    -webkit-text-stroke: 1.5px rgb(255, 255, 255);;
+    color: transparent;
+}
+
+/* FLEX BOX */
+
 
 .flexbox {
   display: flex;
@@ -51,7 +79,7 @@ li {
   width: 400px;
   height: 500px;
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.15);
-  margin: 0px 20px;
+  margin: 20px 20px;
   background-color: #fff;
   border-radius: 10px;
   align-self: auto;
@@ -60,7 +88,16 @@ li {
 
 .number-title{
     font-size: 72px;
-    -webkit-text-stroke: 3px rgb(0, 0, 255);;
+    -webkit-text-stroke: 3px rgb(0, 0, 0);;
     font-weight: 600;
     color: transparent;
+    font-style: italic;
+}
+
+.img-box{
+    width: 300px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
 }
