--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ img {
   position: fixed;
   top: 0;
   width: 100%;
-  height: 100px;
+  height: 80px;
   z-index: 1000;
 }
 
@@ -45,8 +45,8 @@ img {
   background: rgb(0, 0, 255);
   background: linear-gradient(13deg,rgba(0, 0, 255, 1) 0%,rgba(0, 212, 255, 1) 100%);
   width: 100%;
-  padding: 300px;
-  margin-top: 100px;
+  padding: 300px 0px;
+  margin-top: 80px;
 }
 
 .main-text{
@@ -63,7 +63,6 @@ img {
 }
 
 /* FLEX BOX */
-
 
 .flexbox {
   display: flex;
