--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background-color: #fff;
+  background-color: var(--color-grey)
 }
 
 a,
@@ -16,48 +16,96 @@ li {
 }
 
 img {
-    -webkit-user-drag: none;
-    -khtml-user-drag: none;
-    -moz-user-drag: none;
-    -o-user-drag: none;
-  }
+  -webkit-user-drag: none;
+  -khtml-user-drag: none;
+  -moz-user-drag: none;
+  -o-user-drag: none;
+}
+
+:root{
+  --color-light: #fff;
+  --color-dark : #000;
+  --color-grey: #f6f8fa;
+}
 
 /* NAVBAR */
 
 .navbar {
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.15);
-  width: 100%;
-  background-color: #fff;
+  background-color: var(--color-light);
   position: fixed;
   top: 0;
   width: 100%;
-  height: 80px;
-  z-index: 1000;
+  padding: 20px 50px;
+  height: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
+.link-navbar{
+  color: var(--color-dark);
+  font-size: 16px;
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  text-decoration: none;
+  display: flex;
+  float: right;
+}
+
+.link-title{
+  color: #000;
+  font-size: 16px;
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  text-decoration: none;
+  display: flex;
+  margin: 0px 20px;
+  padding: 15px 30px;
+  border-radius: 50px;
+}
+.link-title:hover{
+  background: linear-gradient(
+    13deg,
+    rgba(0, 0, 255, 1) 0%,
+    rgba(0, 212, 255, 1) 100%
+  );
+  color:  var(--color-light);
+}
+
+
+.logo {
+  width: 190px;
+}
 
 
 /* MAIN BACKGROUND */
 
 .main-background {
   background: rgb(0, 0, 255);
-  background: linear-gradient(13deg,rgba(0, 0, 255, 1) 0%,rgba(0, 212, 255, 1) 100%);
+  background: linear-gradient(
+    13deg,
+    rgba(0, 0, 255, 1) 0%,
+    rgba(0, 212, 255, 1) 100%
+  );
   width: 100%;
   padding: 300px 0px;
   margin-top: 80px;
 }
 
-.main-text{
-    color: #fff;
-    letter-spacing: 0.8px;
-    font-weight: 700;
-    text-align: center;
-    font-size: 50px;
+.main-text {
+  color: var(--color-light);
+  letter-spacing: 0.8px;
+  font-weight: 700;
+  text-align: center;
+  font-size: 50px;
 }
 
-.main-text-weight{
-    -webkit-text-stroke: 1.5px rgb(255, 255, 255);;
-    color: transparent;
+.main-text-weight {
+  -webkit-text-stroke: 1.5px var(--color-light);
+  color: transparent;
 }
 
 /* FLEX BOX */
@@ -73,28 +121,38 @@ img {
 }
 
 .box {
-  width: 400px;
-  height: 500px;
-  box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.15);
+  width: 450px;
   margin: 20px 20px;
-  background-color: #fff;
+  background-color: var(--color-light);
   border-radius: 10px;
   align-self: auto;
-  padding: 20px 30px;
+  padding: 30px 30px;
+
+  background-color: var(--color-light);
+  box-shadow: 0 0.25rem 0.75rem rgb(0 0 0 / 5%);
+  border: 1px solid rgba(0, 0, 0, 0.125);
 }
 
-.number-title{
-    font-size: 72px;
-    -webkit-text-stroke: 3px rgb(0, 0, 0);;
-    font-weight: 600;
-    color: transparent;
-    font-style: italic;
+.number-title {
+  font-size: 72px;
+  -webkit-text-stroke: 3px var(--color-dark);
+  font-weight: 600;
+  color: transparent;
+  font-style: italic;
 }
 
-.img-box{
-    width: 300px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 30px;
+.img-box {
+  width: 300px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  height: 240px;
+}
+
+.sous-title-box {
+  margin-top: 20px;
+}
+
+.paragraphe-box {
+  margin-top: 20px;
 }
