--- a/assets/css/exercices&projets.css
+++ b/assets/css/exercices&projets.css
@@ -145,17 +145,21 @@ li {
 }
 
 .box-html-css{
-  background: rgb(255, 94, 0);
+  background: rgb(255,164,39);
+  background: linear-gradient(169deg, rgba(255,164,39,1) 0%, rgba(255,117,0,1) 100%);
 }
 .box-js{
-  background: rgb(255, 208, 0);
+  background: rgb(255,207,0);
+  background: linear-gradient(169deg, rgba(255,207,0,1) 0%, rgba(255,194,0,1) 100%);
   
 }
 .box-ux-ui{
-  background: linear-gradient(90deg, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
+  background: rgb(131,58,180);
+background: linear-gradient(315deg, rgba(131,58,180,1) 0%, rgba(232,144,255,1) 99%);
 }
 .box-design{
-  background: linear-gradient(45deg, rgb(255, 0, 0), rgb(225, 0, 255));
+  background: rgb(255,0,251);
+  background: linear-gradient(21deg, rgba(255,0,251,1) 0%, rgba(255,194,0,1) 100%);
 }
 
 .sous-title-box {
@@ -178,6 +182,14 @@ li {
   cursor: pointer;
   border-radius: 5px;
   color: var(--color-dark);
-  font-weight: 700;
+  font-weight: 600;
   font-size: 18px;
+}
+
+.title-noprojects{
+  font-size: 45px;
+  font-weight: 700;
+  text-align: center;
+  margin-top: 50px;
+  padding: 250px 0px;
 }
