--- a/assets/css/apropos.css
+++ b/assets/css/apropos.css
@@ -42,6 +42,14 @@ li {
   align-items: center;
 }
 
+.box-navbar{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  max-width: 1200px;
+}
+
 .link-navbar{
   color: var(--color-dark);
   font-size: 16px;
