--- a/assets/css/apropos.css
+++ b/assets/css/apropos.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background-color: var(--color-grey)
+  background-color: var(--color-grey);
 }
 
 a,
@@ -15,16 +15,15 @@ li {
   list-style-type: none;
 }
 
-:root{
+:root {
   --color-light: #fff;
-  --color-dark : #000;
+  --color-dark: #000;
   --color-grey: #f6f8fa;
   --gradient-blue: linear-gradient(
     13deg,
     rgba(0, 0, 255, 1) 0%,
     rgba(0, 212, 255, 1) 100%
   );
-
 }
 
 /* NAVBAR */
@@ -42,7 +41,7 @@ li {
   align-items: center;
 }
 
-.box-navbar{
+.box-navbar {
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -50,7 +49,7 @@ li {
   max-width: 1200px;
 }
 
-.link-navbar{
+.link-navbar {
   color: var(--color-dark);
   font-size: 16px;
   font-weight: bold;
@@ -61,7 +60,7 @@ li {
   float: right;
 }
 
-.link-title{
+.link-title {
   color: #000;
   font-size: 16px;
   font-weight: bold;
@@ -73,16 +72,14 @@ li {
   padding: 15px 30px;
   border-radius: 50px;
 }
-.link-title:hover{
+.link-title:hover {
   background: var(--gradient-blue);
-  color:  var(--color-light);
+  color: var(--color-light);
 }
-
 
 .logo {
   width: 90px;
 }
-
 
 /* MAIN BACKGROUND */
 
