--- a/assets/css/exercices&projets.css
+++ b/assets/css/exercices&projets.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background-color: var(--color-grey)
+  background-color: var(--color-grey);
 }
 
 a,
@@ -15,18 +15,15 @@ li {
   list-style-type: none;
 }
 
-
-
-:root{
+:root {
   --color-light: #fff;
-  --color-dark : #000;
+  --color-dark: #000;
   --color-grey: #f6f8fa;
   --gradient-blue: linear-gradient(
     13deg,
     rgba(0, 0, 255, 1) 0%,
     rgba(0, 212, 255, 1) 100%
   );
-
 }
 
 /* NAVBAR */
@@ -44,7 +41,7 @@ li {
   align-items: center;
 }
 
-.box-navbar{
+.box-navbar {
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -52,7 +49,7 @@ li {
   max-width: 1200px;
 }
 
-.link-navbar{
+.link-navbar {
   color: var(--color-dark);
   font-size: 16px;
   font-weight: bold;
@@ -63,7 +60,7 @@ li {
   float: right;
 }
 
-.link-title{
+.link-title {
   color: #000;
   font-size: 16px;
   font-weight: bold;
@@ -75,16 +72,14 @@ li {
   padding: 15px 30px;
   border-radius: 50px;
 }
-.link-title:hover{
+.link-title:hover {
   background: var(--gradient-blue);
-  color:  var(--color-light);
+  color: var(--color-light);
 }
-
 
 .logo {
   width: 90px;
 }
-
 
 /* MAIN BACKGROUND */
 
@@ -151,22 +146,37 @@ li {
   object-fit: contain;
 }
 
-.box-html-css{
-  background: rgb(255,164,39);
-  background: linear-gradient(169deg, rgba(255,164,39,1) 0%, rgba(255,117,0,1) 100%);
+.box-html-css {
+  background: rgb(255, 164, 39);
+  background: linear-gradient(
+    169deg,
+    rgba(255, 164, 39, 1) 0%,
+    rgba(255, 117, 0, 1) 100%
+  );
 }
-.box-js{
-  background: rgb(255,207,0);
-  background: linear-gradient(169deg, rgba(255,207,0,1) 0%, rgba(255,194,0,1) 100%);
-  
+.box-js {
+  background: rgb(255, 207, 0);
+  background: linear-gradient(
+    169deg,
+    rgba(255, 207, 0, 1) 0%,
+    rgba(255, 194, 0, 1) 100%
+  );
 }
-.box-ux-ui{
-  background: rgb(131,58,180);
-background: linear-gradient(315deg, rgba(131,58,180,1) 0%, rgba(232,144,255,1) 99%);
+.box-ux-ui {
+  background: rgb(131, 58, 180);
+  background: linear-gradient(
+    315deg,
+    rgba(131, 58, 180, 1) 0%,
+    rgba(232, 144, 255, 1) 99%
+  );
 }
-.box-design{
-  background: rgb(255,0,251);
-  background: linear-gradient(21deg, rgba(255,0,251,1) 0%, rgba(255,194,0,1) 100%);
+.box-design {
+  background: rgb(255, 0, 251);
+  background: linear-gradient(
+    21deg,
+    rgba(255, 0, 251, 1) 0%,
+    rgba(255, 194, 0, 1) 100%
+  );
 }
 
 .sous-title-box {
@@ -176,10 +186,9 @@ background: linear-gradient(315deg, rgba(131,58,180,1) 0%, rgba(232,144,255,1) 9
   text-transform: uppercase;
   text-align: center;
   color: var(--color-light);
-
 }
 
-.button-link-box{
+.button-link-box {
   padding: 20px 30px;
   display: block;
   margin: auto;
@@ -193,18 +202,18 @@ background: linear-gradient(315deg, rgba(131,58,180,1) 0%, rgba(232,144,255,1) 9
   font-size: 18px;
 }
 
-.title-noprojects{
+.title-noprojects {
   font-size: 45px;
   font-weight: 700;
   text-align: center;
   margin-top: 50px;
 }
 
-.box-noprojects{
+.box-noprojects {
   padding: 290px 0px;
 }
 
-.button-returntohome{
+.button-returntohome {
   background-color: var(--color-dark);
   color: #fff;
   display: block;
