--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background-color: var(--bg-color-switch);
+  background-color: var(--color-light);
 }
 
 a,
@@ -15,136 +15,64 @@ li {
   list-style-type: none;
 }
 
-
- /* Light Mode */
- :root {
+:root {
   --color-light: #fff;
   --color-dark: #000;
-  --color-light-switch: #fff;
-  --color-dark-switch: #000;
-  --bg-color-switch: #f6f8fa;
-  --gradient-blue: linear-gradient(
-    13deg,
-    rgba(0, 0, 255, 1) 0%,
-    rgba(0, 212, 255, 1) 100%
-  );
-  --color-blue: #0068AA;
+  --bg-color-switch: #0d1117;
+  --gradient-blue: linear-gradient(151deg, #0b2850 0, #040c21 36%);
+  --color-blue: #0068aa;
 }
- /* Dark Mode */
+/* NAVBAR */
 
-[data-theme="dark"] {
-  --color-light-switch: #1D1D1F;;
-  --color-dark-switch: #fff;
-  --bg-color-switch: #1D1D1F;
-  
-}
-
-  /* NAVBAR */
-  
-  .navbar {
-    box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.15);
-    background-color: var(--color-light-switch);
-    position: fixed;
-    top: 0;
-    width: 100%;
-    padding: 25px 50px;
-    height: auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .box-navbar {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 100%;
-    max-width: 1200px;
-  }
-  
-  .link-navbar {
-    color: var(--color-dark-switch);
-    display: flex;
-    float: right;
-  }
-  
-  .link-title {
-   color: var(--color-dark-switch);
-    font-size: 17px;
-    font-weight: 600;
-    letter-spacing: 1px;
-    text-decoration: none;
-    display: flex;
-    margin: 0px 60px;
-    padding: 8px 0px;
-    border-bottom: 1px solid transparent;
-  }
-  .link-title:hover {
-    border-bottom: 1px solid var(--color-dark-switch);
-    transition: 0.5s;
-  }
-  
-  .logo {
-    width: 70px;
-    fill: var(--color-dark-switch);
-  }
-
-
-  /* Button Switch Dark to Light*/
-
-.theme-switch-wrapper {
-	display: flex;
-	align-items: center;
-	float: right;
+.navbar {
+  box-shadow: none;
+  background-color: var(--color-light);
+  position: fixed;
+  top: 0;
+  width: 100%;
+  padding: 18px 50px;
+  height: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  transition: 0.5s;
 }
 
-.theme-switch {
-	display: inline-block;
-	height: 34px;
-	position: relative;
-	width: 60px;
+.box-navbar {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  max-width: 1200px;
 }
-  
-.theme-switch input {
-	display: none;
+
+.link-navbar {
+  color: var(--color-dark);
+  display: flex;
+  float: right;
 }
-  
-.slider {
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	background-color: #CCC;
-	position: absolute;
-	cursor: pointer;
-	transition: .4s;
+
+.link-title {
+  color: var(--color-dark);
+  font-size: 16px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  text-decoration: none;
+  display: flex;
+  margin: 0px 60px;
+  padding: 12px 20px;
+  border: 1px solid transparent;
+  border-radius: 50px;
 }
-  
-.slider:before {
-	height: 26px;
-	width: 26px;
-	bottom: 4px;
-	left: 4px;
-	background-color: #FFF;
-	content: "";
-	position: absolute;
-	transition: .4s;
+.link-title:hover {
+  border: 1px solid;
+  transition: 0.5s;
 }
-  
-input:checked + .slider {
-	background-color: var(--color-blue);;
-}
-  
-input:checked + .slider:before {
-	transform: translateX(26px);
-}
-  
-.slider.round {
-	border-radius: 34px;
-}
-  
-.slider.round:before {
-	border-radius: 50%;
+
+.logo {
+  width: 70px;
+  margin-top: 3px;
+  fill: var(--color-dark);
 }
   
     
@@ -192,9 +120,8 @@ input:checked + .slider:before {
   align-self: auto;
   padding: 30px 30px;
 
-  background-color: var(--color-light);
-  box-shadow: 0 0.25rem 0.75rem rgb(0 0 0 / 5%);
-  border: 1px solid rgba(0, 0, 0, 0.125);
+  box-shadow: 0 2.76726px 2.21381px rgb(0 0 0 / 7%), 0 6.6501px 5.32008px rgb(0 0 0 / 4%), 0 12.5216px 10.0172px rgb(0 0 0 / 3%), 0 22.3363px 17.869px rgb(0 0 0 / 3%), 0 41.7776px 33.4221px rgb(0 0 0 / 2%), 0 100px 80px rgb(0 0 0 / 2%);
+  background-color: #f6f6f6;
 }
 
 .number-title {
