--- a/assets/css/exercices&projets.css
+++ b/assets/css/exercices&projets.css
@@ -26,7 +26,7 @@ li {
 
 .navbar {
   box-shadow: none;
-  background-color: var(--color-light);
+  background-color: transparent;
   position: fixed;
   top: 0;
   width: 100%;
@@ -47,13 +47,13 @@ li {
 }
 
 .link-navbar {
-  color: var(--color-dark);
+  color: var(--color-light);
   display: flex;
   float: right;
 }
 
 .link-title {
-  color: var(--color-dark);
+  color: var(--color-light);
   font-size: 16px;
   font-weight: 500;
   letter-spacing: 1px;
@@ -72,8 +72,9 @@ li {
 .logo {
   width: 70px;
   margin-top: 3px;
-  fill: var(--color-dark);
+  fill: var(--color-light);
 }
+  
 
 
 /* MAIN BACKGROUND */
