--- a/assets/css/exercices&projets.css
+++ b/assets/css/exercices&projets.css
@@ -147,21 +147,6 @@ li {
   object-fit: contain;
 }
 
-.box-html-css {
-  background: linear-gradient(320deg, #d3655d 0%, #e2a856 100%);
-}
-.box-js {
-  background-color: #fbb034;
-  background-image: linear-gradient(315deg, #fbb034 0%, #ffdd00 74%);
-}
-.box-design {
-  background: linear-gradient(
-    66.26deg,
-    #771f89 -5.22%,
-    #834cef 46.12%,
-    #636cea 99.41%
-  );
-}
 
 .sous-title-box {
   padding: 60px 0px;
@@ -271,7 +256,7 @@ li {
   background: #0080ff;
   color: #24292f;
   border: 1px solid rgba(53, 72, 91, 0.15);
-  border-radius: 5px;
+  border-radius: 50px;
   padding: 20px 70px 20px 20px;
   font-weight: 500;
   font-size: 18px;
@@ -288,13 +273,21 @@ a:hover {
 }
 
 .row{
-  margin: 4rem 0;
+  margin: 40px 0px 40px 0px;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: center;
   align-content: stretch;
-  align-items: flex-start;
+  align-items: center;
+  max-width: 1200px;
+}
+
+.box-flexbox{
+  display: block;
+  margin: 0 auto;
+  max-width: 1200px;
+  height: 800px;
 }
 
 .list-inline {
@@ -306,8 +299,8 @@ a:hover {
 }
 
 .filter-button{
-padding: 10px 30px;
-border-radius: 10px;
+padding: 15px 35px;
+border-radius: 50px;
 color: #000;
 border: 1px solid transparent;
 font-weight: 500;
@@ -338,6 +331,7 @@ text-transform: uppercase;
   height: 250px;
   width: 300px;
   margin: 20px;
+  padding: 20px 30px;
 }
 
 .overlay {
@@ -353,4 +347,24 @@ text-transform: uppercase;
 }
 .filter:hover .overlay {
   opacity: 0.8;
+}
+
+.button-access-project{
+  border: 1px solid #000;
+    color: rgb(0, 0, 0);
+  cursor: pointer;
+  border-radius: 50px;
+  padding: 15px 20px;
+  font-weight: 500;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+font-size: 15px;
+  padding: 15px 35px;
+  border-radius: 50px;
+  color: #000;
+  text-transform: uppercase;
+  text-align: center;
+  margin-top: 120px;
+
 }
