--- a/assets/css/exercices&projets.css
+++ b/assets/css/exercices&projets.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background-color: var(--color-light);
+  background-color: #f7f7fb;
 }
 
 a,
@@ -127,7 +127,7 @@ li {
   align-self: auto;
   padding: 30px 30px;
   background: var(--gradient-blue);
-  box-shadow: 0 0.25rem 0.75rem rgb(0 0 0 / 5%);
+
 }
 
 .number-title {
@@ -291,43 +291,52 @@ a:hover {
 }
 
 .list-inline {
-  padding: 8px 15px;
-  border-radius: 50px;
-  color: #ff0000;
+  padding: 0px 15px;
+  border-radius: 10px;
   display: flex;
-  margin: 3px 0;
+  margin: 0px 20px;
+  box-shadow: 0 2.76726px 2.21381px rgb(0 0 0 / 7%), 0 6.6501px 5.32008px rgb(0 0 0 / 4%), 0 12.5216px 10.0172px rgb(0 0 0 / 3%), 0 22.3363px 17.869px rgb(0 0 0 / 3%), 0 41.7776px 33.4221px rgb(0 0 0 / 2%), 0 100px 80px rgb(0 0 0 / 2%);
+  background-color: #f6f6f6;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: stretch;
+  align-items: center;
+
 }
 
 .filter-button{
 padding: 15px 35px;
-border-radius: 50px;
-color: #000;
+border-radius: 10px;
+color: rgb(0, 0, 0);
 border: 1px solid transparent;
 font-weight: 500;
-margin: 20px 20px;
+margin: 20px 40px;
 font-size: 17px;
 text-transform: uppercase;
 }
 
 
 .gallery_filter_tab{
-  padding: 100px 0px 20px 0px;
   display: block;
   margin: 0 auto;
-  margin-left: auto;
-  margin-right: auto;
-  width: 800px;
+  max-width: 1200px;
+  padding: 50px 0px;
 }
 
 .filter-button.active {
-  border: 1px solid #000;
-  color: rgb(0, 0, 0);
-  box-shadow: 0 2.76726px 2.21381px rgb(0 0 0 / 7%), 0 6.6501px 5.32008px rgb(0 0 0 / 4%), 0 12.5216px 10.0172px rgb(0 0 0 / 3%), 0 22.3363px 17.869px rgb(0 0 0 / 3%), 0 41.7776px 33.4221px rgb(0 0 0 / 2%), 0 100px 80px rgb(0 0 0 / 2%);
+  background-color: #000000;
+  color: #ffffff;
+}
+
+.filter-button:hover {
+  background-color: #000000;
+  color: #ffffff;
+  transition: 0.5s;
 }
 .filter {
   border-radius: 10px;
-  box-shadow: 0 2.76726px 2.21381px rgb(0 0 0 / 7%), 0 6.6501px 5.32008px rgb(0 0 0 / 4%), 0 12.5216px 10.0172px rgb(0 0 0 / 3%), 0 22.3363px 17.869px rgb(0 0 0 / 3%), 0 41.7776px 33.4221px rgb(0 0 0 / 2%), 0 100px 80px rgb(0 0 0 / 2%);
-  background-color: #f6f6f6;
+  background-color: #ffffff;
   height: 400px;
   width: 350px;
   margin: 20px;
@@ -361,10 +370,19 @@ text-transform: uppercase;
   margin-left: auto;
 font-size: 15px;
   padding: 15px 35px;
-  border-radius: 50px;
+  border-radius: 10px;
   color: #000;
   text-transform: uppercase;
   text-align: center;
   margin-top: 270px;
 
 }
+
+
+.button-access-project:hover {
+  border: 1px solid #000;
+  color: #fff;
+  background-color: #000;
+  transition: 0.5s;
+}
+
