--- a/assets/css/exercices&projets.css
+++ b/assets/css/exercices&projets.css
@@ -30,7 +30,7 @@ li {
   position: fixed;
   top: 0;
   width: 100%;
-  padding: 18px 50px;
+  padding: 22px 50px;
   height: auto;
   display: flex;
   justify-content: space-between;
@@ -53,20 +53,87 @@ li {
 }
 
 .link-title {
-  color: var(--color-light);
-  font-size: 16px;
-  font-weight: 500;
-  letter-spacing: 1px;
-  text-decoration: none;
   display: flex;
-  margin: 0px 60px;
-  padding: 12px 20px;
-  border: 1px solid transparent;
-  border-radius: 50px;
+  font-size: 18px;
+  cursor: pointer;
+  padding: 10px 0px;
+  margin: 0px 30px;
+  overflow: hidden;
+  position: relative;
+  color: inherit;
+  text-decoration: none;
 }
-.link-title:hover {
-  border: 1px solid;
-  transition: 0.5s;
+
+.link-title:before{
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 1px;
+  background-color: #ffffff;
+  transform: translateX(-100%);
+}
+.link-title:hover:before {
+  transform: translateX(0);
+}
+
+.link-title:before, a:after{
+  content: '';
+  position: absolute;
+  transition: transform .5s ease;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.sous-link-footer {
+  display: flex;
+  color: var(--grey-dark);
+  font-size: 18px;
+  cursor: pointer;
+  background-color: #313131;
+  padding: 10px 20px;
+  border-radius: 5px;
+  margin: 10px;
+  background-image: var(--gradient-color); 
+  background-image: var(--gradient-color);
+  background-position: 50% 100%;
+  background-size: 0% 2px;
+  background-repeat: no-repeat;
+  transition: all 0.2s linear;
+}
+
+.sous-link-footer:hover {
+  background-size: 100% 2px;
+  color: var(--white);
 }
 
 .logo {
