--- a/assets/css/exercices&projets.css
+++ b/assets/css/exercices&projets.css
@@ -341,6 +341,18 @@ a:hover {
   height: 800px;
 }
 
+
+
+
+
+
+.gallery_filter_tab{
+  display: block;
+  margin: 0 auto;
+  width:1000px;
+  padding: 50px 0px;
+}
+
 .list-inline {
   padding: 0px 15px;
   border-radius: 10px;
@@ -367,14 +379,6 @@ font-size: 17px;
 text-transform: uppercase;
 }
 
-
-.gallery_filter_tab{
-  display: block;
-  margin: 0 auto;
-  width:1000px;
-  padding: 50px 0px;
-}
-
 .filter-button.active {
   background-color: #000000;
   color: #ffffff;
@@ -385,6 +389,102 @@ text-transform: uppercase;
   color: #ffffff;
   transition: 0.5s;
 }
+
+.chevron_mobile{
+  display: none;
+
+}
+
+@media screen and (max-width: 1010px) {
+
+
+
+
+
+
+
+
+
+
+
+  
+
+  .gallery_filter_tab{
+    display: block;
+    margin: 0 auto;
+    width: 400px;
+    padding: 50px 0px;
+  }
+  
+  .list-inline {
+    padding: 0px 0px;
+    border-radius: 10px;
+    display: flex;
+    margin: 0px 20px;
+    box-shadow: 0 2.76726px 2.21381px rgb(0 0 0 / 7%), 0 6.6501px 5.32008px rgb(0 0 0 / 4%), 0 12.5216px 10.0172px rgb(0 0 0 / 3%), 0 22.3363px 17.869px rgb(0 0 0 / 3%), 0 41.7776px 33.4221px rgb(0 0 0 / 2%), 0 100px 80px rgb(0 0 0 / 2%);
+    background-color: #f6f6f6;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: stretch;
+    align-items: center;
+    text-align: center;
+  
+  }
+  
+  .filter-button{
+  padding: 35px 35px;
+  border-radius: 10px;
+  color: rgb(0, 0, 0);
+  border: 1px solid transparent;
+  font-weight: 500;
+  margin: 0px 0px;
+  font-size: 17px;
+  text-transform: uppercase;
+  width: 100%;
+  text-align: center;
+  display: block;
+  }
+  
+  .filter-button.active {
+    background-color: #000000;
+    color: #ffffff;
+    cursor: pointer;
+    text-align: center;
+  }
+  
+  .filter-button:hover {
+    background-color: #000000;
+    color: #ffffff;
+    transition: 0.5s;
+  }
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .filter {
   border-radius: 10px;
   background-color: #ffffff;
@@ -436,4 +536,12 @@ font-size: 15px;
   background-color: #000;
   transition: 0.5s;
 }
+
+
+
+
+
+
+
+
 
